<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/background"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            app:srcCompat="@drawable/ic_artboard_1"
            android:scaleType="center"
            />



        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_weight="1"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/big_font"
            android:textStyle="bold"
            android:gravity="center"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ed_height"
            android:hint="@string/user"
            android:background="@drawable/gray_bg"
            android:textSize="@dimen/font_size"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingLeft="20dp"
            android:layout_margin="20dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ed_height"
            android:hint="@string/password"
            android:background="@drawable/gray_bg"
            android:textSize="@dimen/font_size"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingLeft="@dimen/padding_left_20"
            android:layout_margin="@dimen/margin_20"
            android:inputType="textPassword"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgot_Password"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Or_Sign_Up_With"
            android:textColor="#404040"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">



            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_icons8_google"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_icons8_facebook"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_icons8_twitter"
                />


        </LinearLayout>


    </LinearLayout>




</RelativeLayout>