<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_gray"
        >

        <include
            layout="@layout/toolbar"
            />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/lin_2"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:background="@color/transparent"
                android:textSize="@dimen/font_25sp"
                android:paddingTop="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundMode="none"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:background="@color/transparent"
                android:hint="@string/enter_description" />
        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/lin_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shine"
        android:layout_above="@+id/lin_1"
        android:orientation="horizontal">



            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:background="@drawable/add_note_bg"
                android:text="@string/select_date"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_17sp" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/time_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/add_note_bg"
            android:text="@string/select_time"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textSize="@dimen/font_17sp" />

        </LinearLayout>











    <LinearLayout
        android:id="@+id/lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/btn_save"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:src="@drawable/ic_baseline_done_24"
        app:backgroundTint="@color/main_gray"
        app:tint="@color/white" />



</RelativeLayout>